--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -139,9 +139,17 @@
 	.tabs-newtab-button:-moz-lwtheme,
 	.tabbrowser-tab:-moz-lwtheme,
 	.tabbrowser-tab[pinned]:-moz-lwtheme{
-	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
 	}
 	
+	@media all and (-moz-windows-glass) {
+		.tabs-newtab-button:-moz-lwtheme,
+		.tabbrowser-tab:-moz-lwtheme,
+		.tabbrowser-tab[pinned]:-moz-lwtheme{
+		  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+		}
+	}
+
 	.tabs-newtab-button:-moz-lwtheme{
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	}
