--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -732,6 +732,12 @@
 	  min-height:16px !important;
 	}
 	
+	#ctraddon_pw_alt_newtabp label {
+	  background:url('chrome://classic_theme_restorer/content/images/newtab_page-on.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
+	
 	#ctraddon_pw_bmbutpanelm label,
 	#ctraddon_pw_bmbutnotext label {
 	  background:url('chrome://classic_theme_restorer/content/images/bookmarks.png') no-repeat left !important;
@@ -744,6 +750,14 @@
 	  -moz-padding-start:20px !important;
 	  min-height:16px !important;
 	}
+	
+	#ctraddon_pw_readermode label,
+	#ctraddon_pw_readermode2 label {
+	  background:url('chrome://classic_theme_restorer/content/images/reader-mode.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
+	
 	
 	/* Padlock icons */
 	#ctraddon_pw_padlock_default label{
