--- a/xpi/content/css/alt_newtabpage.css
+++ b/xpi/content/css/alt_newtabpage.css
@@ -75,6 +75,7 @@
 	  -moz-margin-end: 5px !important;
 	}
 	
+	.newtab-control::-moz-focus-inner,
 	#newtab-customize-button::-moz-focus-inner {
       border: 0;
 	}
