--- a/xpi/content/css/alt_newtabpage.css
+++ b/xpi/content/css/alt_newtabpage.css
@@ -1,8 +1,13 @@
 @-moz-document url(about:newtab) {
 	
 	#newtab-intro-what,
-	#newtab-search-form{
-		display: none !important;
+	#newtab-search-form,
+	#newtab-customize-enhanced,
+	#newtab-customize-panel,
+	.newtab-suggested-bounds,
+	.newtab-suggested,
+	.newtab-sponsored {
+	  display: none !important;
 	}
 	.newtab-cell,
 	.newtab-link{ 
@@ -13,65 +18,59 @@
 	  margin: 20px 10px 20px !important;
 	}
 	
-	#newtab-scrollbox[page-disabled="true"] #newtab-customize-button,
-	#newtab-scrollbox[page-disabled="true"] .newtab-customize {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-off.png), 0, 16, 16, 0) !important;
+	#newtab-customize-button,
+	.newtab-customize,
+	.newtab-control-pin,
+	.newtab-control-block {
 	  background-size: 16px !important;
 	  height: 16px !important;
 	  width: 16px !important;
+	}
+	
+	#newtab-scrollbox[page-disabled="true"] #newtab-customize-button,
+	#newtab-scrollbox[page-disabled="true"] .newtab-customize {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 160, 16, 144) !important;
 	}
 	
 	#newtab-scrollbox:not([page-disabled="true"]) #newtab-customize-button,
 	#newtab-scrollbox:not([page-disabled="true"]) .newtab-customize {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-on.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 176, 16, 160) !important;
 	}
 	
-	.newtab-control-pin,
-	.newtab-site[pinned] .newtab-control-pin:hover:active {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-pin1.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	.newtab-control-pin {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 16, 16, 0) !important;
 	}
 
-	.newtab-control-pin:hover,
-	.newtab-site[pinned] .newtab-control-pin:hover {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-pin3.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	.newtab-control-pin:hover {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 32, 16, 16) !important;
 	}
 
-	.newtab-control-pin:hover:active,
+	.newtab-control-pin:hover:active {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 48, 16, 32) !important;
+	}
+
 	.newtab-site[pinned] .newtab-control-pin {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-pin2.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 64, 16, 48) !important;
+	}
+	
+	.newtab-site[pinned] .newtab-control-pin:hover {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 80, 16, 64) !important;
+	}
+	
+	.newtab-site[pinned] .newtab-control-pin:hover:active {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 96, 16, 80) !important;
 	}
 
 	.newtab-control-block {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-close1.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 112, 16, 96) !important;
 	}
 
 	.newtab-control-block:hover {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-close2.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 128, 16, 112) !important;
 	}
 
 	.newtab-control-block:hover:active {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_page-close3.png), 0, 16, 16, 0) !important;
-	  background-size: 16px !important;
-	  height: 16px !important;
-	  width: 16px !important;
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 144, 16, 128) !important;
 	}
 	
 	#newtab-customize-button {
@@ -82,14 +81,6 @@
 	.newtab-control::-moz-focus-inner,
 	#newtab-customize-button::-moz-focus-inner {
       border: 0;
-	}
-	
-	#newtab-customize-panel,
-	.newtab-suggested-bounds,
-	.newtab-suggested,
-	.newtab-sponsored,
-	#newtab-customize-enhanced {
-	  display: none;
 	}
 	
 	#newtab-customize-button {
