--- a/xpi/content/css/win8/bmbut_pmenu_extra.css
+++ b/xpi/content/css/win8/bmbut_pmenu_extra.css
@@ -2,7 +2,8 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
-	#ctraddon_BMB_bookmarksPopup menupopup[placespopup=true] > hbox {
+	#ctraddon_BMB_bookmarksPopup menupopup[placespopup=true] > hbox,
+	#ctraddon_BMB_bookmarksPopup #ctraddon_BMB_subscribeToPageSubmenuMenupopup {
 	  background: var(--panel-arrowcontent-background) !important;
 	  border: var(--panel-arrowcontent-border) !important;
 	}
