--- a/xpi/content/css/alt_newtabpage.css
+++ b/xpi/content/css/alt_newtabpage.css
@@ -26,17 +26,7 @@
 	  height: 16px !important;
 	  width: 16px !important;
 	}
-	
-	#newtab-scrollbox[page-disabled="true"] #newtab-customize-button,
-	#newtab-scrollbox[page-disabled="true"] .newtab-customize {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 160, 16, 144) !important;
-	}
-	
-	#newtab-scrollbox:not([page-disabled="true"]) #newtab-customize-button,
-	#newtab-scrollbox:not([page-disabled="true"]) .newtab-customize {
-	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 176, 16, 160) !important;
-	}
-	
+
 	.newtab-control-pin {
 	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 16, 16, 0) !important;
 	}
@@ -73,6 +63,16 @@
 	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 144, 16, 128) !important;
 	}
 	
+	#newtab-scrollbox:not([page-disabled="true"]) #newtab-customize-button,
+	#newtab-scrollbox:not([page-disabled="true"]) .newtab-customize {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 160, 16, 144) !important;
+	}
+	
+	#newtab-scrollbox[page-disabled="true"] #newtab-customize-button,
+	#newtab-scrollbox[page-disabled="true"] .newtab-customize {
+	  background-image: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/newtab_controls.png), 0, 176, 16, 160) !important;
+	}
+	
 	#newtab-customize-button {
 	  margin-top: 5px !important;
 	  -moz-margin-end: 5px !important;
@@ -89,5 +89,12 @@
 	#newtab-customize-button:-moz-any(:hover, :active, [active]) {
 	  opacity: 1.0;
 	}
+	
+	.newtab-control-pin,
+	.newtab-control-block {
+	  border: 1px white solid !important;
+	  height: 18px !important;
+	  width: 18px !important;
+   }
 
 }
