--- a/xpi/content/css/feedinurl.css
+++ b/xpi/content/css/feedinurl.css
@@ -47,6 +47,11 @@
 	  visibility: visible !important;
 	}
 	
+	/* move reading list button to the left */
+	/*#readinglist-addremove-button {
+	  -moz-box-ordinal-group: 0;
+	}*/
+	
 	/**/
 	#urlbar-icons #feed-button .toolbarbutton-icon { 
 	  filter: none !important;
