--- a/xpi/content/css/tabs_devedextra.css
+++ b/xpi/content/css/tabs_devedextra.css
@@ -14,7 +14,8 @@
 	.ntabhovcolorbox,
 	#ntabcolorbox,
 	#ntabhovcolorbox,
-	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_pw_colors_ntab_t{
+	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_pw_colors_ntab_t,
+	#ctraddon_pw_tabs_devtabs{
 	  visibility: visible !important;
 	}
 	#ctraddon_ccap_t_default{
