--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -95,15 +95,9 @@
 	  margin: 0 !important;
 	}
 
-	.tab-background,
-	.tabs-newtab-button {
+	.tab-background {
 	  -moz-margin-end: 0 !important;
 	  -moz-margin-start: 0 !important;
-	}
-
-	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
-	  -moz-padding-end: 0 !important;
-	  -moz-padding-start: 0 !important;
 	}
 
 	.tab-background-start::after,
@@ -268,7 +262,6 @@
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  -moz-margin-end:-4px !important;
 	}
-	
 	
 	#TabsToolbar{
 	  background-image: none !important;
