--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -91,15 +91,9 @@
 	  margin: 0 !important;
 	}
 
-	.tab-background,
-	.tabs-newtab-button {
+	.tab-background {
 	  -moz-margin-end: 0 !important;
 	  -moz-margin-start: 0 !important;
-	}
-
-	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
-	  -moz-padding-end: 0 !important;
-	  -moz-padding-start: 0 !important;
 	}
 
 	.tab-background-start::after,
