--- a/xpi/content/css/hidepanelanimation.css
+++ b/xpi/content/css/hidepanelanimation.css
@@ -9,7 +9,7 @@
 	#PanelUI-popup * {
 	  transition: none !important;
 	}
-	* #ctraddon_BMB_bookmarksPopup{
+	#main-window * #ctraddon_BMB_bookmarksPopup{
 	  transition-duration: 0.01s !important;
 	}
 }
