--- a/xpi/content/css/win8/classictabsextra.css
+++ b/xpi/content/css/win8/classictabsextra.css
@@ -131,4 +131,10 @@
 	  border-bottom: 1px solid transparent !important;
 	}
 	
+	#TabsToolbar #tabbrowser-tabs .tabs-newtab-button:-moz-lwtheme,
+	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab:-moz-lwtheme,
+	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab[pinned]:-moz-lwtheme{
+	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+	}
+	
 }
