--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -770,6 +770,12 @@
 	  min-height:16px !important;
 	}
 
+	#ctraddon_pw_skipprintpr label {
+	  background:url('chrome://classic_theme_restorer/content/images/appmenu_print.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
+
 	#ctraddon_pw_noresizerxp label {
 	  background:url('chrome://classic_theme_restorer/content/images/resizer.png') no-repeat left !important;
 	  -moz-padding-start:20px !important;
