--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -61,6 +61,9 @@
 	  background: unset !important;
 	  box-shadow: unset !important;
 	}
+	#nav-bar #urlbar-icons .toolbarbutton-1 {
+	  -moz-appearance: none !important;
+	}
 	
 	#navigator-toolbox #nav-bar:not([tabsontop="false"]) .toolbarbutton-1 > .toolbarbutton-menubutton-button,
 	#navigator-toolbox #nav-bar:not([tabsontop="false"]) .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker,
@@ -303,4 +306,16 @@
 	  padding:0px !important;
 	}
 
+	/* toolbar menu button inside urlbar icons container */
+	#urlbar-icons toolbarbutton[type="menu"],
+	#urlbar-icons toolbarbutton[type="menu"] .toolbarbutton-icon {
+	  -moz-appearance: none !important;
+	  padding-top: unset !important;
+	  padding-bottom: unset !important;
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	  border: unset !important;
+	  box-shadow: unset !important;
+	  background: unset !important;
+	}
 }
