--- a/xpi/content/css/winxp/classictabsextra2.css
+++ b/xpi/content/css/winxp/classictabsextra2.css
@@ -53,6 +53,11 @@
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
 	  -moz-padding-start: 0px !important;
 	}
+	@media all and (-moz-windows-classic) {
+		#TabsToolbar[currentset*="tabbrowser-tabs,tabmixScrollBox"]:not([orient="vertical"]) .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
+		  -moz-padding-end: 2px !important;
+		}
+	}
 
 	@media not all and (-moz-windows-classic) {
 	
