--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -174,7 +174,9 @@
 	  margin-top:6px !important;
 	}
 	
-	/* toolbar menu button inside urlbar icons container */
+	/* special buttons inside urlbars boxes */
+	#urlbar #notification-popup-box + box toolbarbutton,
+	#urlbar #notification-popup-box + box toolbarbutton .toolbarbutton-icon,
 	#urlbar-icons toolbarbutton[type="menu"],
 	#urlbar-icons toolbarbutton[type="menu"] .toolbarbutton-icon {
 	  -moz-appearance: none !important;
