--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -129,14 +129,14 @@
 	}
 
 	.tabs-newtab-button:not(:-moz-lwtheme){
-	  border-width: 0px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 0 fill repeat stretch !important;
+	  border-width: 5px 3px 6px !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 5 3 6 fill repeat round !important;
 	  border-style: solid !important;
 	}
 	
 	.tabs-newtab-button:-moz-lwtheme{
-	  border-width: 0px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 0 3 0 fill repeat stretch !important;
+	  border-width: 5px 3px 6px !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 5 3 6 fill repeat round !important;
 	  border-style: solid !important;
 	}
 
@@ -184,31 +184,9 @@
 	  color: inherit !important;
 	}
 	
-	/*.tabs-newtab-button:-moz-lwtheme,
-	.tabbrowser-tab:-moz-lwtheme,
-	.tabbrowser-tab[pinned]:-moz-lwtheme{
-	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
-	}*/
-	
-	/*@media all and (-moz-windows-glass) {
-		.tabs-newtab-button:-moz-lwtheme,
-		.tabbrowser-tab:-moz-lwtheme,
-		.tabbrowser-tab[pinned]:-moz-lwtheme{
-		  background-size: calc(100% - 1px) calc(100% - 3px) !important;
-		}
-	}*/
-
 	.tabs-newtab-button:-moz-lwtheme{
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	}
-	
-	/*@media all and (-moz-windows-glass) {
-		.tabs-newtab-button:-moz-lwtheme,		
-		.tabbrowser-tab:-moz-lwtheme,
-		.tabbrowser-tab[pinned]:-moz-lwtheme {
-		  background-size: calc(100% - 1px) calc(100% - 4px) !important;
-		}
-	}*/
 
 	.tabbrowser-tab:not([selected=true]):hover:-moz-lwtheme-brighttext,
 	.tabs-newtab-button:-moz-lwtheme-brighttext:hover {
@@ -340,7 +318,7 @@
 	#main-window[tabsintitlebar]:not([sizemode="maximized"]):not([inFullscreen]) #toolbar-menubar:-moz-any([autohide="true"][inactive],:not([autohide])) + #TabsToolbar .tab-background-middle:not([selected=true]) {
 	  clip-path: none !important;
 	}
-
+	
 	/* Private Tab extension */
 	.tabs-newtab-button + .tabs-newtab-button {
 	  -moz-margin-start: 15px !important;
