--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -114,7 +114,7 @@
 	  margin: 0 !important;
 	}
 
-	.tab-background {
+	#TabsToolbar:not([orient="vertical"]) .tab-background {
 	  -moz-margin-end: 0 !important;
 	  -moz-margin-start: 0 !important;
 	}
