--- a/xpi/content/css/tabs_squaredc2.css
+++ b/xpi/content/css/tabs_squaredc2.css
@@ -20,7 +20,7 @@
 	  margin: 0 !important;
 	}
 
-	.tab-background {
+	#TabsToolbar:not([orient="vertical"]) .tab-background {
 	  -moz-margin-end: 0 !important;
 	  -moz-margin-start: 0 !important;
 	}
