--- a/xpi/content/css/svgfilters.css
+++ b/xpi/content/css/svgfilters.css
@@ -20,6 +20,7 @@
 	}
 
 	/*Red*/
+	#pocket-button .toolbarbutton-icon,
 	#PanelUI-quit:not(:hover) .toolbarbutton-icon,
 	#web-apps-button .toolbarbutton-icon,
 	#e10s-button .toolbarbutton-icon,
