--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -789,6 +789,12 @@
 	  min-height:16px !important;
 	}
 	
+	#ctraddon_pw_pocket label {
+	  background:url('chrome://classic_theme_restorer/content/images/pocket.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
+	
 	
 	/* Padlock icons */
 	#ctraddon_pw_padlock_default label{
